src/styles/CardHandler.css
.Card-Holder {
    align-items: flex-start;
    display: grid;
    position: relative;
    width: 100%;
    margin: 0 auto;
    padding: 3rem;
    background: rgb(31, 31, 31);
    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
    justify-content: center;
    gap: 4rem;
    transition: var(--transition);
    z-index: 10;
}

.Card {
    color: var(--text-light);
    font-size: 1.3em;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    max-width: 100%;
    padding: 2rem;
    transform: scale(1);
    transition: transform 0.1s ease-in-out;
    transition: var(--transition);
    box-shadow: var(--box-shadow);
    border-radius: var(--border-radius);
    background-color: rgb(47, 47, 47);
    animation: pop-in 0.5s;
    border: 2px solid transparent;
    position: relative;
    z-index: 10;
}

.Card:hover {
    border-color: var(--primary-accent);
    background-color: rgb(51, 51, 51);
    color: var(--text-light);
}

.Card.selected {
    transform: scale(1.1);
}

.Card-Header {
    width: 100%;
}

.Card.a0101955 {
    font-size: .862em;
}

.Card-Name {
    width: 100%;
    font-size: 1.5em;
}

.card-count {
    padding: 1rem;
}

.Data-Heading {
    font-size: 1.2rem;
    color: var(--text-light);
}

.Data-Data {
    font-size: 1.3rem;
    color: var(--text-dark);
}

.No-Results {
    margin: 2rem;
    padding: 2rem;
    color: var(--text-dark);
}

.Card-Data {
    opacity: 0;
    max-height: 0;
    padding: 1rem 2rem 0 2rem;
    overflow: hidden;
    transition: max-height 0.8s ease, opacity 0.8s ease;
}

.Card-Data.visible {
    opacity: 1;
    max-height: 1000px;
}

@media only screen and (max-width: 362px) {
    .Card {
        padding: .5rem .1rem .5rem .1rem;
    }

    .time-text {
        font-size: .8em;
    }
}

@media only screen and (max-width: 423px) {
    .Card {
        padding: 1rem .1rem 1rem .1rem;
    }

    .time-text {
        font-size: .8em;
    }
}

@media only screen and (min-width: 424px) and (max-width: 900px),
only screen and (max-width: 680px) {
    .Card-Holder {
        display: grid;
        /* Stick with grid for responsiveness */
        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
    }
}

@media only screens and (max-width: 520px) {
    .time-text {
        font-size: 1em;
    }
}

@media only screen and (min-width: 1920px) {
    .Card-Holder {
        grid-template-columns: repeat(6, 1fr);
    }
}

@media only screen and (min-width: 680px) and (max-width: 900px),
only screen and (max-width: 680px) {
    .Card-Holder {
        display: grid;
        /* Stick with grid for responsiveness */
        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
    }
}

@media only screen and (min-width: 900px) and (max-width: 1200px) {
    .Card-Holder {
        gap: calc(5rem + 0.8vw);
        grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
    }
}

